// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`React app Jest snapshot testing for Allen Young's Stockmarket Demo registration page 1`] = `
[
  <div
    className="top-bar"
  >
    <a
      href="http://localhost"
      style={
        {
          "color": "rgb(255,255,255)",
          "textDecoration": "none",
        }
      }
    >
      Allen Young's Stockmarket Demo
    </a>
  </div>,
  <section
    className="registration-form-section"
  >
    <h1
      className="registration-form-section-heading"
    >
      Allen Young's Stockmarket Demo
      <br />
      Account Registration
    </h1>
    <form
      className="registration-form"
    >
      <div
        className="registration-form-div-grid"
      >
        <label
          className="registration-form-label-first-name"
          htmlFor="firstname"
        >
          First name
        </label>
        <input
          className="registration-form-input-first-name"
          id="firstname"
          name="firstname"
          placeholder="First name"
          size="20"
          type="text"
        />
        <label
          className="registration-form-label-last-name"
          htmlFor="lastname"
        >
          Last name
        </label>
        <input
          className="registration-form-input-last-name"
          id="lastname"
          name="lastname"
          placeholder="Last name"
          size="20"
          type="text"
        />
        <div
          className="registration-form-div-below-first-last-names"
        />
        <label
          className="registration-form-label-email-address"
          htmlFor="emailaddress"
        >
          Email address
        </label>
        <input
          className="registration-form-input-email-address"
          id="emailaddress"
          name="emailaddress"
          placeholder="Email address"
          size="20"
          type="text"
        />
        <label
          className="registration-form-label-phone-number"
          htmlFor="phonenumber"
        >
          Phone number
        </label>
        <input
          className="registration-form-input-phone-number"
          id="phonenumber"
          name="phonenumber"
          placeholder="Phone number"
          size="20"
          type="text"
        />
        <div
          className="registration-form-div-below-phone-number"
        />
        <label
          className="registration-form-label-password"
          htmlFor="password"
        >
          Password
        </label>
        <input
          className="registration-form-input-password"
          id="password"
          name="password"
          placeholder="Password"
          type="password"
        />
        <p
          className="registration-form-password-show-hide"
        >
          <a
            href=""
            onClick={[Function]}
            style={
              {
                "color": "rgb(255,255,255)",
                "textDecoration": "none",
              }
            }
          >
            show
          </a>
        </p>
        <label
          className="registration-form-label-password-retype"
          htmlFor="passwordretype"
        >
          Password (Retype)
        </label>
        <input
          className="registration-form-input-password-retype"
          id="passwordretype"
          name="passwordretype"
          placeholder="Password (Retype)"
          size="20"
          type="password"
        />
      </div>
      <p
        className="registration-form-paragraph-notice1"
      >
        Password must be at least 10 characters, and must contain a letter, a number, and a special character from any of the following ~\`!@#$%^&*-_+=|\\/?;:"'&lt;&gt;,.
        []().
      </p>
      <p
        className="registration-form-paragraph-notice2"
      >
        Your email address will be your login ID.
      </p>
      <p
        className="registration-form-paragraph-notice3"
      >
        After pressing the register button below, you'll receive an email-address verification email with a link that you must click to verify your email address.  You will not be able to log in before verifying your email address.
      </p>
      <div
        className="registration-form-div-register-button"
      >
        <p
          className="registration-form-error-notice"
        />
        <input
          className="registration-form-input-register-button"
          onClick={[Function]}
          type="button"
          value="Register"
        />
      </div>
    </form>
  </section>,
  <footer
    className="footer"
  >
    <p>
      Allen Young's Stockmarket Demo by Allen Young.
    </p>
    <p>
      For demonstrating Allen Young's full-stack web app development skills to potential employers.
    </p>
    <p>
      For more of Allen Young's software development skills demonstration, visit 
      <a
        href="https://AllenYoung.dev"
        style={
          {
            "color": "white",
          }
        }
        target="_blank"
      >
        AllenYoung.dev
      </a>
       and 
      <a
        href="https://GitHub.com/AllenYoungDev"
        style={
          {
            "color": "white",
          }
        }
        target="_blank"
      >
        GitHub.com/AllenYoungDev
      </a>
      .
    </p>
    <p>
      © 2023 Allen Young.  All rights reserved.
    </p>
  </footer>,
]
`;

exports[`React app Jest snapshot testing for Allen Young's Stockmarket Demo registration page 2`] = `
[
  <div
    className="top-bar"
  >
    <a
      href="http://localhost"
      style={
        {
          "color": "rgb(255,255,255)",
          "textDecoration": "none",
        }
      }
    >
      Allen Young's Stockmarket Demo
    </a>
  </div>,
  <section
    className="registration-form-section"
  >
    <h1
      className="registration-form-section-heading"
    >
      Allen Young's Stockmarket Demo
      <br />
      Account Registration
    </h1>
    <form
      className="registration-form"
    >
      <div
        className="registration-form-div-grid"
      >
        <label
          className="registration-form-label-first-name"
          htmlFor="firstname"
        >
          First name
        </label>
        <input
          className="registration-form-input-first-name"
          disabled={true}
          id="firstname"
          name="firstname"
          size="20"
          type="text"
        />
        <label
          className="registration-form-label-last-name"
          htmlFor="lastname"
        >
          Last name
        </label>
        <input
          className="registration-form-input-last-name"
          disabled={true}
          id="lastname"
          name="lastname"
          size="20"
          type="text"
        />
        <div
          className="registration-form-div-below-first-last-names"
        />
        <label
          className="registration-form-label-email-address"
          htmlFor="emailaddress"
        >
          Email address
        </label>
        <input
          className="registration-form-input-email-address"
          disabled={true}
          id="emailaddress"
          name="emailaddress"
          size="20"
          type="text"
        />
        <label
          className="registration-form-label-phone-number"
          htmlFor="phonenumber"
        >
          Phone number
        </label>
        <input
          className="registration-form-input-phone-number"
          disabled={true}
          id="phonenumber"
          name="phonenumber"
          size="20"
          type="text"
        />
        <div
          className="registration-form-div-below-phone-number"
        />
        <label
          className="registration-form-label-password"
          htmlFor="password"
        >
          Password
        </label>
        <input
          className="registration-form-input-password"
          disabled={true}
          id="password"
          name="password"
          type="text"
        />
        <label
          className="registration-form-label-password-retype"
          htmlFor="passwordretype"
        >
          Password (Retype)
        </label>
        <input
          className="registration-form-input-password-retype"
          disabled={true}
          id="passwordretype"
          name="passwordretype"
          size="20"
          type="text"
        />
      </div>
      <p
        className="registration-form-paragraph-notice1"
      >
        Password must be at least 10 characters, and must contain a letter, a number, and a special character from any of the following ~\`!@#$%^&*-_+=|\\/?;:"'&lt;&gt;,.
        []().
      </p>
      <p
        className="registration-form-paragraph-notice2"
      >
        Your email address will be your login ID.
      </p>
      <p
        className="registration-form-paragraph-notice3"
      >
        After pressing the register button below, you'll receive an email-address verification email with a link that you must click to verify your email address.  You will not be able to log in before verifying your email address.
      </p>
      <div
        className="registration-form-div-register-button"
      >
        <p
          className="registration-form-error-notice"
        />
        <input
          className="registration-form-input-register-button"
          disabled={true}
          onClick={[Function]}
          type="button"
          value="Register"
        />
      </div>
    </form>
  </section>,
  <footer
    className="footer"
  >
    <p>
      Allen Young's Stockmarket Demo by Allen Young.
    </p>
    <p>
      For demonstrating Allen Young's full-stack web app development skills to potential employers.
    </p>
    <p>
      For more of Allen Young's software development skills demonstration, visit 
      <a
        href="https://AllenYoung.dev"
        style={
          {
            "color": "white",
          }
        }
        target="_blank"
      >
        AllenYoung.dev
      </a>
       and 
      <a
        href="https://GitHub.com/AllenYoungDev"
        style={
          {
            "color": "white",
          }
        }
        target="_blank"
      >
        GitHub.com/AllenYoungDev
      </a>
      .
    </p>
    <p>
      © 2023 Allen Young.  All rights reserved.
    </p>
  </footer>,
]
`;

exports[`React app Jest snapshot testing for Allen Young's Stockmarket Demo registration page 3`] = `
[
  <div
    className="top-bar"
  >
    <a
      href="http://localhost"
      style={
        {
          "color": "rgb(255,255,255)",
          "textDecoration": "none",
        }
      }
    >
      Allen Young's Stockmarket Demo
    </a>
  </div>,
  <section
    className="registration-form-section"
  >
    <h1
      className="registration-form-section-heading"
    >
      Allen Young's Stockmarket Demo
      <br />
      Account Registration
    </h1>
    <form
      className="registration-form"
    >
      <div
        className="registration-form-div-grid"
      >
        <label
          className="registration-form-label-first-name"
          htmlFor="firstname"
        >
          First name
        </label>
        <input
          className="registration-form-input-first-name"
          disabled={true}
          id="firstname"
          name="firstname"
          size="20"
          type="text"
        />
        <label
          className="registration-form-label-last-name"
          htmlFor="lastname"
        >
          Last name
        </label>
        <input
          className="registration-form-input-last-name"
          disabled={true}
          id="lastname"
          name="lastname"
          size="20"
          type="text"
        />
        <div
          className="registration-form-div-below-first-last-names"
        />
        <label
          className="registration-form-label-email-address"
          htmlFor="emailaddress"
        >
          Email address
        </label>
        <input
          className="registration-form-input-email-address"
          disabled={true}
          id="emailaddress"
          name="emailaddress"
          size="20"
          type="text"
        />
        <label
          className="registration-form-label-phone-number"
          htmlFor="phonenumber"
        >
          Phone number
        </label>
        <input
          className="registration-form-input-phone-number"
          disabled={true}
          id="phonenumber"
          name="phonenumber"
          size="20"
          type="text"
        />
        <div
          className="registration-form-div-below-phone-number"
        />
        <label
          className="registration-form-label-password"
          htmlFor="password"
        >
          Password
        </label>
        <input
          className="registration-form-input-password"
          disabled={true}
          id="password"
          name="password"
          type="text"
        />
        <label
          className="registration-form-label-password-retype"
          htmlFor="passwordretype"
        >
          Password (Retype)
        </label>
        <input
          className="registration-form-input-password-retype"
          disabled={true}
          id="passwordretype"
          name="passwordretype"
          size="20"
          type="text"
        />
      </div>
      <p
        className="registration-form-paragraph-notice1"
      >
        Password must be at least 10 characters, and must contain a letter, a number, and a special character from any of the following ~\`!@#$%^&*-_+=|\\/?;:"'&lt;&gt;,.
        []().
      </p>
      <p
        className="registration-form-paragraph-notice2"
      >
        Your email address will be your login ID.
      </p>
      <p
        className="registration-form-paragraph-notice3"
      >
        After pressing the register button below, you'll receive an email-address verification email with a link that you must click to verify your email address.  You will not be able to log in before verifying your email address.
      </p>
      <div
        className="registration-form-div-register-button"
      >
        <p
          className="registration-form-error-notice"
        />
        <input
          className="registration-form-input-register-button"
          disabled={true}
          onClick={[Function]}
          type="button"
          value="Register"
        />
      </div>
    </form>
  </section>,
  <footer
    className="footer"
  >
    <p>
      Allen Young's Stockmarket Demo by Allen Young.
    </p>
    <p>
      For demonstrating Allen Young's full-stack web app development skills to potential employers.
    </p>
    <p>
      For more of Allen Young's software development skills demonstration, visit 
      <a
        href="https://AllenYoung.dev"
        style={
          {
            "color": "white",
          }
        }
        target="_blank"
      >
        AllenYoung.dev
      </a>
       and 
      <a
        href="https://GitHub.com/AllenYoungDev"
        style={
          {
            "color": "white",
          }
        }
        target="_blank"
      >
        GitHub.com/AllenYoungDev
      </a>
      .
    </p>
    <p>
      © 2023 Allen Young.  All rights reserved.
    </p>
  </footer>,
]
`;

exports[`React app Jest snapshot testing for Allen Young's Stockmarket Demo registration page 4`] = `
[
  <div
    className="top-bar"
  >
    <a
      href="http://localhost"
      style={
        {
          "color": "rgb(255,255,255)",
          "textDecoration": "none",
        }
      }
    >
      Allen Young's Stockmarket Demo
    </a>
  </div>,
  <section
    className="registration-form-section"
  >
    <h1
      className="registration-form-section-heading"
    >
      Allen Young's Stockmarket Demo
      <br />
      Account Registration
    </h1>
    <form
      className="registration-form"
    >
      <div
        className="registration-form-div-grid"
      >
        <label
          className="registration-form-label-first-name"
          htmlFor="firstname"
        >
          First name
        </label>
        <input
          className="registration-form-input-first-name"
          id="firstname"
          name="firstname"
          placeholder="First name"
          size="20"
          type="text"
        />
        <label
          className="registration-form-label-last-name"
          htmlFor="lastname"
        >
          Last name
        </label>
        <input
          className="registration-form-input-last-name"
          id="lastname"
          name="lastname"
          placeholder="Last name"
          size="20"
          type="text"
        />
        <div
          className="registration-form-div-below-first-last-names"
        />
        <label
          className="registration-form-label-email-address"
          htmlFor="emailaddress"
        >
          Email address
        </label>
        <input
          className="registration-form-input-email-address"
          id="emailaddress"
          name="emailaddress"
          placeholder="Email address"
          size="20"
          type="text"
        />
        <label
          className="registration-form-label-phone-number"
          htmlFor="phonenumber"
        >
          Phone number
        </label>
        <input
          className="registration-form-input-phone-number"
          id="phonenumber"
          name="phonenumber"
          placeholder="Phone number"
          size="20"
          type="text"
        />
        <div
          className="registration-form-div-below-phone-number"
        />
        <label
          className="registration-form-label-password"
          htmlFor="password"
        >
          Password
        </label>
        <input
          className="registration-form-input-password"
          id="password"
          name="password"
          placeholder="Password"
          type="password"
        />
        <p
          className="registration-form-password-show-hide"
        >
          <a
            href=""
            onClick={[Function]}
            style={
              {
                "color": "rgb(255,255,255)",
                "textDecoration": "none",
              }
            }
          >
            show
          </a>
        </p>
        <label
          className="registration-form-label-password-retype"
          htmlFor="passwordretype"
        >
          Password (Retype)
        </label>
        <input
          className="registration-form-input-password-retype"
          id="passwordretype"
          name="passwordretype"
          placeholder="Password (Retype)"
          size="20"
          type="password"
        />
      </div>
      <p
        className="registration-form-paragraph-notice1"
      >
        Password must be at least 10 characters, and must contain a letter, a number, and a special character from any of the following ~\`!@#$%^&*-_+=|\\/?;:"'&lt;&gt;,.
        []().
      </p>
      <p
        className="registration-form-paragraph-notice2"
      >
        Your email address will be your login ID.
      </p>
      <p
        className="registration-form-paragraph-notice3"
      >
        After pressing the register button below, you'll receive an email-address verification email with a link that you must click to verify your email address.  You will not be able to log in before verifying your email address.
      </p>
      <div
        className="registration-form-div-register-button"
      >
        <p
          className="registration-form-error-notice"
        />
        <input
          className="registration-form-input-register-button"
          onClick={[Function]}
          type="button"
          value="Register"
        />
      </div>
    </form>
  </section>,
  <footer
    className="footer"
  >
    <p>
      Allen Young's Stockmarket Demo by Allen Young.
    </p>
    <p>
      For demonstrating Allen Young's full-stack web app development skills to potential employers.
    </p>
    <p>
      For more of Allen Young's software development skills demonstration, visit 
      <a
        href="https://AllenYoung.dev"
        style={
          {
            "color": "white",
          }
        }
        target="_blank"
      >
        AllenYoung.dev
      </a>
       and 
      <a
        href="https://GitHub.com/AllenYoungDev"
        style={
          {
            "color": "white",
          }
        }
        target="_blank"
      >
        GitHub.com/AllenYoungDev
      </a>
      .
    </p>
    <p>
      © 2023 Allen Young.  All rights reserved.
    </p>
  </footer>,
]
`;
